# BackpropagationFFNN

./: .gitignore  CMakeLists.txt  README.md
include/: ffnn.hpp  mat.hpp  number_generator.hpp
src/: ffnn.hpp  main.cpp  mat.hpp
src/engine/: window_context_handler.hpp
src/engine/common/: index_vector.hpp  math.hpp  utils.hpp
src/engine/render/: viewport_handler.hpp
